# DarkVader-PLG_payload-consequence-analyser

./: .gitignore  AUDIT_LOG.md  DEVLOG.md  LICENSE  README.md  action.yml  analyze.py  post_check_run.py  pyproject.toml  requirements.txt  structural_parser.py  test_analyzer.py
.github/workflows/: payloadguard.yml  publish.yml
examples/: payloadguard.yml
